chore(plugin): add JUCE Projucer scaffold and Linux CI build check
Track stemhub plugin source, .jucer project, JuceLibraryCode, and Linux Makefile exporter files.

Add GitHub Actions workflow to install JUCE Linux dependencies and build the plugin in Release mode.

Ignore generated plugin build artifacts and binary outputs.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,21 @@
 __pycache__
+.DS_Store
+
+# JUCE plugin generated build artifacts
+plugin/stemhub/Builds/**/build/
+plugin/stemhub/Builds/**/Debug/
+plugin/stemhub/Builds/**/Release/
+plugin/stemhub/Builds/**/.vs/
+plugin/stemhub/Builds/**/.idea/
+plugin/stemhub/Builds/**/CMakeFiles/
+plugin/stemhub/Builds/**/cmake_install.cmake
+plugin/stemhub/Builds/**/CMakeCache.txt
+plugin/stemhub/Builds/**/compile_commands.json
+
+# JUCE binary outputs
+plugin/stemhub/**/*.vst3/
+plugin/stemhub/**/*.component/
+plugin/stemhub/**/*.app/
+
+# JUCE library files
+plugin/stemhub/JUCE/**
